--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/base": "^1.0.0-beta.4",
+    "@cloudinary/react": "^1.13.0",
+    "@material-tailwind/html": "^2.2.2",
+    "cloudinary": "^2.1.0",
     "cors": "^2.8.5",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.1.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "uuid": "^9.0.1"
   },
@@ -23,6 +30,7 @@
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.10.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -30,5 +38,6 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^5.1.4"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
