--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,13 @@
     "cors": "^2.8.5",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
+    "react-use": "^17.5.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
