--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@
           context: ./client
           dockerfile: Dockerfile
         image: yourapp-client
-        container_name: yourapp-react-client
+        container_name: Unigram-frontend
         command: npm start
         volumes:
           - ./path/to/your/client/code:/usr/app
