--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/base": "^1.0.0-beta.4",
     "@cloudinary/react": "^1.13.0",
     "@material-tailwind/html": "^2.2.2",
+    "chart.js": "^4.4.2",
     "cloudinary": "^2.1.0",
     "cors": "^2.8.5",
     "nanoid": "^5.0.6",
